# logixbase

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  build.bat  build_testpypi.bat  get_version.py  gitpush.bat  pyproject.toml  setup.py
demos/: build_demo.py  build_demo_exec.py  concur_demo.py  configer_demo.py  coordinator_demo.py  ctpgateway_demo.py  feeder_demo.py  logger_demo.py  process_manager_demo.py  simple_engine.py
demos/configs/: cfg.base.ini  cfg.base.py  cfg.base.yaml  compiler.ini  database.base.ini  database.dev.ini  database.env.ini  logixbase.yaml  mail.base.py  mail.base.yaml  mail.dev.yaml  mail.env.yaml
demos/demoproj/: clear.py  main.py  test.py
logixbase/: __init__.py
logixbase/algolib/: __init__.py  basestat.py  chart.py  fin.py  matops.py  optimization.py  regression.py  stattest.py  stochastic.py  timeseries.py  utils.py
logixbase/compiler/: __init__.py  build.py  schema.py
logixbase/configer/: __init__.py  hotreloader.py  loader.py  proxy.py  schema.py
logixbase/engine/: __init__.py  base.py  constant.py  manager.py  schema.py
logixbase/executor/: __init__.py  base.py  context.py  coordinator.py  main.py  payload.py  process.py  schema.py  task.py  thread.py
logixbase/feeder/: __init__.py  base.py  schema.py  sqlfeeder.py  tqfeeder.py  tsfeeder.py  wfeeder.py
logixbase/feeder/config/: database.yaml  tinysoft.yaml  wind.yaml
logixbase/feeder/sql/etf/: info.sql  quote.sql
logixbase/feeder/sql/future/: datetime.sql  info.sql  quote.sql  ticker.sql
logixbase/feeder/sql/index/: info.sql  quote.sql
logixbase/feeder/sql/option/: info.sql  quote.sql
logixbase/feeder/sql/stock/: info.sql  quote.sql
logixbase/gateway/: __init__.py  base.py  ctp.py  schema.py
logixbase/logger/: __init__.py  config.py  constant.py  core.py  decorator.py  formatter.py  mpwriter.py  parser.py  schema.py  utils.py  writer.py
logixbase/logger/dashboard/: README.md  main.py  rundev.bat  runprod.bat
logixbase/logger/dashboard/backend/: cache.py  config.py  main.py  models.py  reader.py
logixbase/logger/dashboard/front/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
logixbase/logger/dashboard/front/src/: index.css  main.tsx
logixbase/logger/dashboard/front/src/components/: DateMultiSelect.tsx  LevelCheckboxGroup.tsx  LogTable.tsx  ProjectSelector.tsx
logixbase/logger/dashboard/front/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  datepicker.tsx  input.tsx  multi-select.tsx  select.tsx  table.tsx  utils.tsx
logixbase/logger/dashboard/front/src/components/ui-kit/: index.ts
logixbase/logger/dashboard/front/src/pages/: DashboardPage.tsx
logixbase/plugin/: __init__.py  base.py  log_monitor.py  manager.py  progress.py
logixbase/protocol/: __init__.py  database.py  feeder.py  gateway.py  mod.py  plugin.py  task.py
logixbase/trader/: __init__.py  config.py  constant.py  schema.py  tool.py  utils.py
logixbase/utils/: __init__.py  database.py  decorator.py  dthandler.py  schema.py  strmanip.py  tool.py  web.py
